--- a/stylesheet.css
+++ b/stylesheet.css
@@ -150,6 +150,39 @@ img.featured{
     background-color: thistle;
 }
 
+.namePopup form{
+    display: flex;
+    position: fixed;
+    top: 0;
+    z-index: 10;
+    width: 100%;
+    height: 100%;
+    background-color: white;
+    opacity: 95%;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;  
+}
+
+.namePopup form h1{
+    font-size: 8vw;
+}
+.namePopup form p{
+    font-size: 3vw;
+}
+
+.namePopup form input{
+    width: 20vw;
+    max-width: 300px;
+    text-align: center;
+    border-color: lightskyblue;
+    border-radius: 5px;
+}
+
+.namePopup.active{
+    display: none;
+}
+
 @media only screen and (max-width: 550px){
 
     .bar{
