--- a/stylesheet.css
+++ b/stylesheet.css
@@ -255,6 +255,7 @@ img.featured{
         top: 2px;
         margin:0;
         z-index: 2;
+        padding-top: 10vw;
     }
     .hamburger.active .bar:nth-child(3){
         transform: translateY(-10px) rotate(-45deg);
@@ -262,6 +263,7 @@ img.featured{
         top: 22px;
         margin:0;
         z-index: 2;
+        padding-top: 10vw;
     }
 
 
