--- a/stylesheet.css
+++ b/stylesheet.css
@@ -183,6 +183,17 @@ img.featured{
     display: none;
 }
 
+#submitform{
+    background-color:#96bfe6;
+    margin-top: 5vw;
+    border-radius: 1vw;
+    border:none;
+    font-size:1.5vw;
+    width:15vw;
+    color: #0D2B52;
+    
+}
+
 @media only screen and (max-width: 550px){
 /*HAMBURGER MENU*/
     header{
