--- a/stylesheet.css
+++ b/stylesheet.css
@@ -280,7 +280,7 @@ img.featured{
     }
     .hamburger.active .bar:nth-child(1){
         transform: translateY(10px) rotate(45deg);
-        position:absolute;
+        position:fixed;
         top: 2px;
         margin:0;
         z-index: 2;
@@ -288,7 +288,7 @@ img.featured{
     }
     .hamburger.active .bar:nth-child(3){
         transform: translateY(-10px) rotate(-45deg);
-        position:absolute;
+        position:fixed;
         top: 22px;
         margin:0;
         z-index: 2;
